# zero2prod

./: Cargo.toml
.sqlx/: query-348eb164f876ac925a29bf8830803b432beacc5b0985a17443eb303a1be02238.json
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
