[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Israel Santiago <israel.santiago75@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
cargo-expand = "1.0.79"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.196", features = ["derive"] }
config = "0.13"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[dev-dependencies]
reqwest = "0.11.24"

